# Satellite-Detection

./: .env.example  .gitignore  DEMO.md  README.md  Software Requirements.md  docker-compose.yaml  docker-help.txt
AIWaterfall/: cloud_detection.py  ship-detecter-cv.ipynb  ship_detection.md
AIWaterfall/boat_detector/: README.md  opt.yaml  results.csv
AIWaterfall/boat_detector/weights/: best.pt  last.pt
Backend/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  startquide.md  test.py
Backend/flaskr/: __init__.py  aisstream.py  db.py  main.py  schema.sql  views.py
Frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
Frontend/public/: index.html  styles.css
Frontend/src/: App.css  App.jsx  app.js  index.html  styles.css  supabaseClient.js
Frontend/src/components/: FilterModal.js  FilterModal.jsx  Header.js  List.js  List.jsx  Map.js  Map.jsx  Markers.js  Markers.jsx  MenuModal.js  Navbar.jsx  Panel.jsx  app-sidebar.jsx
Frontend/src/pages/: Account.jsx  Home.js  Home.jsx  MapPage.jsx  NotFound.jsx  Ship.js  Ship.jsx  Ships.js  Ships.jsx
Ground_Station_Frontend/Map Page/: package-lock.json
Ground_Station_Frontend/Map Page/src/: app.js  (+2 more)
Ground_Station_Frontend/src/: api.js
HowToTrainAI/: 0aa565354.xml  README.md  conversion.py  dataset.yaml  discover.py  discovery.txt
HowToTrainAI/train3/: Results.md  args.yaml  results.csv
main/py_sat/: detect.py  how_to_decode.txt  main.py  package-lock.json  requirements.txt  startguide.md
main/sat_ai/: Cargo.toml  README.md
old-frontend/src/: app.js  styles.css
(+5 files in other folders)
