[tool.poetry]
name = "satellite-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"  # You can change this if needed
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
flask = ">=3.1.0,<4.0.0"
websockets = ">=15.0.1,<16.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
flask-api = ">=3.1,<4.0"
flask-cors = "^5.0.1"


[tool.poetry.dev-dependencies]
# Add your development dependencies here (e.g., pytest)
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"